style(backend): format Java sources